--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,8 @@
         <h1>Exercicios HTML</h1>
     </header>
     <nav>
-        <a href="exercicios/teste.html">00 - Teste</a>
-        <a href="exercicios/temp.html">Temp</a>
+        <a href wm-nav="exercicios/teste.html">00 - Teste</a>
+        <a href wm-nav="exercicios/temp.html">Temp</a>
     </nav>
     <section id="conteudo">
 
@@ -20,4 +20,16 @@
         <br> 
         Curso de Desenvolvimento Web
     </footer>
+    <script>
+        document.querySelectorAll('[wm-nav]').forEach(link => {
+            const conteudo = document.getElementById('conteudo')
+
+            link.onclick = function(e) {
+                e.preventDefault()
+                fetch(link.getAttribute('wm-nav'))
+                    .then(resp => resp.text())
+                    .then(html => conteudo.innerHTML = html)
+            }
+        })
+    </script>
 </body>
