--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #conteudo {
+            padding: 30px 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,7 +22,6 @@
 
     </section>
     <footer>
-        <br> 
         Curso de Desenvolvimento Web
     </footer>
     <script>
