--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,9 @@
         <h1>Exercicios HTML</h1>
     </header>
     <nav>
-        <a href wm-nav="exercicios/teste.html">00 - Teste</a>
-        <a href wm-nav="exercicios/temp.html">Temp</a>
+        <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
+        <a href wm-nav="exercicios/texto01.html">01 - Texto 1</a> |
+        <a href wm-nav="exercicios/texto02.html">02 - Texto 2</a> |
     </nav>
     <section id="conteudo">
 
