--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
         <a href wm-nav="exercicios/texto02.html">02 - Texto 2</a> |
         <a href wm-nav="exercicios/listas.html">03 - Listas </a> |
         <a href wm-nav="exercicios/listasAninhadas.html">04 - Lista Aninhada </a> |
+        <a href wm-nav="exercicios/links.html">05 - Links </a> |
     </nav>
     <section id="conteudo">
 
