--- a/html/exercicios/listasAninhadas.html
+++ b/html/exercicios/listasAninhadas.html
@@ -37,6 +37,15 @@
 
 <link rel="stylesheet" href="http://files.cod3r.com.br/curso-web/tree.css">
 
+<style>
+    
+    span:hover {
+        background-color: #dedede;
+    }
+
+</style>
+
+
 <script>
     document.querySelectorAll('[wm-folder]').forEach(folder => {
         folder.onclick = function(e) {
