--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,7 @@
         <a href wm-nav="exercicios/listasAninhadas.html">04 - Lista Aninhada </a> |
         <a href wm-nav="exercicios/links.html">05 - Links </a> |
         <a href wm-nav="exercicios/tabela.html">06 - Tabela </a> |
+        <a href wm-nav="exercicios/form/form.html">07 - Formulário </a> |
     </nav>
     <section id="conteudo">
 
