--- a/css/css/anatomia.html
+++ b/css/css/anatomia.html
@@ -10,11 +10,11 @@
             font-size: 30px;
             text-align: center;
             /* multiplos valores*/
-            border: solid 5px navy;
+            border: solid 5px rgb(8, 8, 249);
             font-family: Arial, Helvetica, sans-serif;
             /* funções */
             width: calc(100% - 40px);
-            background-color: rgb(34, 153, 189);
+            background-color: rgb(189, 62, 34);
         }
 
         /* usando uma pseudo-classe */
