--- a/css/css/seletores.html
+++ b/css/css/seletores.html
@@ -6,7 +6,10 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        #aprovados {
+            color: #ff0;
+            background-color: rgb(120, 5, 5);
+        }
     </style>
 </head>
 
