--- a/css/css/unidades1.html
+++ b/css/css/unidades1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="unidades-absolutas">Opa!</div>
+    <div class="unidades-absolutass">Opa!</div>
     <div class="unidades-relativas">Epa!</div>
 </body>
 
